--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('https://i.ibb.co/d6f9YGk/560e8938-cf3b-4727-9b37-8b704dc77ee2.webp');
+    background-image: url('https://i.ibb.co/gwWrc91/background.png');
     background-size: cover;
 
     background-repeat: no-repeat;
